Downgrade bootstrap.js/.css version and add jquery.js file to fix layout problem

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,12 +59,6 @@ header {
   height: 180px;
 }
 
-.card-columns {
-  display:flex;
-  flex-wrap:wrap;
-  justify-content: space-around;
-}
-
 .card-title {
   overflow: hidden;
   text-overflow: ellipsis;
